--- a/cert-manager/cluster-issuer.yaml
+++ b/cert-manager/cluster-issuer.yaml
@@ -1,4 +1,4 @@
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-staging
@@ -16,4 +16,5 @@ spec:
     solvers:
       - http01:
           ingress:
-            class: traefik-cert-manager
+            #class: traefik-cert-manager
+            class: "traefik-internal" 
